--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -141,6 +141,36 @@
             <a href="https://www.facebook.com/share/v/NSmNMpyzaCQ2bJU8/?mibextid=qi2Omg" target="_blank" class="media-link">
                <i class="fa fa-facebook"></i> অসমলৈ সুনাম কঢ়িয়ালে ছিপাঝাৰ গেৰেণ্ট ... see more
             </a>
+            <a href="https://www.facebook.com/AGWebTV/videos/1718144265652084/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> दरङ जिल्ला अन्तर्गत, टी. के. ग्रान्ट गाउँका हिन्दी शिक्षक तङ्क प्रशाद.. see more
+            </a>
+            <a href="https://www.facebook.com/61550263392667/videos/414249358359820/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> दारांग जिल्लाको ग्रान्ट निवासी डा. सागर भट्टराईले स्टान्फोर्ड विश्वविद्यालय विश्वका ... see more
+            </a>
+            <a href="https://www.facebook.com/100052454907303/posts/1120042736420879/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> শেহতীয়াকৈ আমেৰিকা যুক্তৰাষ্ট্ৰৰ ষ্টেণ্ডফ'ৰ্ড বিশ্ববিদ্যালয়ে প্ৰকাশ কৰা বিশ্বৰ শ্ৰেষ্ঠ ২ ... see more
+            </a>
+            <a href="https://www.facebook.com/100064752562944/posts/939162804918796/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> Stanford_University (USA) ৰ বিশ্বৰ আগশাৰীৰ ২% বিজ্ঞানীৰ ৰেংকিঙৰ তালিকাত IIT ... see more
+            </a>
+            <a href="https://www.facebook.com/100003672795712/posts/3212133268919068/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> Stanford University (USA) ৰ বিশ্বৰ আগশাৰীৰ ২% বিজ্ঞানীৰ ৰেং ... see more
+            </a>
+            <a href="https://www.facebook.com/nd24assam/videos/7886738231432212/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> বিশ্বৰ শ্ৰেষ্ঠ ২% বিজ্ঞানীৰ তালিকাত নাম সন্নিৱিষ্ট ড০ সাগৰ ... see more
+            </a>
+            <a href="https://www.facebook.com/100083716147819/videos/550366864371777/?mibextid=rS40aB7S9Ucbxw6v&ref=sharing" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> দৰঙৰ সুসন্তান বিজ্ঞানী ড০ সাগৰ ভট্টৰায়লৈ বৰুৱাবাৰী ৰাস ... see more
+            </a>
+            <a href="https://www.facebook.com/share/v/NSmNMpyzaCQ2bJU8/?mibextid=qi2Omg" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> অসমলৈ সুনাম কঢ়িয়ালে ছিপাঝাৰ গেৰেণ্ট ... see more
+            </a>
+            <a href="https://www.facebook.com/share/v/NSmNMpyzaCQ2bJU8/?mibextid=qi2Omg" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> অসমলৈ সুনাম কঢ়িয়ালে ছিপাঝাৰ গেৰেণ্ট ... see more
+            </a>
+            <a href="https://www.facebook.com/share/v/NSmNMpyzaCQ2bJU8/?mibextid=qi2Omg" target="_blank" class="media-link">
+               <i class="fa fa-facebook"></i> অসমলৈ সুনাম কঢ়িয়ালে ছিপাঝাৰ গেৰেণ্ট ... see more
+            </a>
          </div>
 
          <!-- YouTube Coverage Section -->
