--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -29,7 +29,7 @@
             margin: 10px;
             padding: 15px 30px;
             font-size: 16px;
-            background-color: #ff0000;
+            background-color: #a6a1a1;
             color: white;
             border: none;
             border-radius: 5px;
