--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -187,12 +187,12 @@
          <!-- Image Gallery Section -->
          <div id="gallery-section" class="media-section">
             <img src="images/Image 1.jpeg" alt="Image 1">
-            <!-- img src="images/Image 2.jpeg" alt="Image 2" -->
+            <img src="images/Image 2.jpeg" alt="Image 2">
             <img src="images/Image 3.jpeg" alt="Image 3">
             <img src="images/Image 4.jpeg" alt="Image 4">
             <img src="images/Image 5.jpeg" alt="Image 5">
-            <!-- img src="images/Image 6.jpeg" alt="Image 6" -->
-            <!-- img src="images/Image 7.jpeg" alt="Image 7" -->
+            <img src="images/Image 6.jpeg" alt="Image 6">
+            <img src="images/Image 7.jpeg" alt="Image 7">
             <img src="images/Image 8.jpeg" alt="Image 8">
             
          </div>
