--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -26,15 +26,15 @@
          }
 
          .media-buttons button {
-            margin: 10px;
+            margin: 7px;
             padding: 15px 30px;
             font-size: 16px;
             background-color: #a6a1a1;
             color: white;
-            border: none;
-            border-radius: 5px;
+            border: ;
+            border-radius: 20px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: background-color 0.7s;
          }
 
          .media-buttons button:hover {
