--- a/Media_Coverage.html
+++ b/Media_Coverage.html
@@ -31,10 +31,10 @@
             font-size: 16px;
             background-color: #a6a1a1;
             color: white;
-            border: ;
-            border-radius: 20px;
+            border:none ;
+            border-radius: 10px;
             cursor: pointer;
-            transition: background-color 0.7s;
+            transition: background-color 0.3s;
          }
 
          .media-buttons button:hover {
